{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 35,
  "lineage": "da1edf33-ba76-1acd-690f-91d56d84ed59",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085ad6ae776d8f09c",
            "arn": "arn:aws:ec2:us-east-1:761018852717:instance/i-0a66cba1d4d583bca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a66cba1d4d583bca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Medha-SWEN-614",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2f01070856add7c",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-227-23-243.compute-1.amazonaws.com",
            "public_ip": "3.227.23.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af975971476de026",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5c668e422972d08",
            "tags": {
              "Name": "WordPress EC2 Instance"
            },
            "tags_all": {
              "Name": "WordPress EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5fdbc41a790d7a4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_db_subnet_group.wordpress_db_subnet_group",
            "module.security_groups.aws_security_group.ec2_sg",
            "module.security_groups.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:internet-gateway/igw-0803cfdc16e8679b5",
            "id": "igw-0803cfdc16e8679b5",
            "owner_id": "761018852717",
            "tags": {
              "Name": "WordPress Internet Gateway"
            },
            "tags_all": {
              "Name": "WordPress Internet Gateway"
            },
            "vpc_id": "vpc-047963b59807ac46a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:route-table/rtb-0479ac95758d1e46e",
            "id": "rtb-0479ac95758d1e46e",
            "owner_id": "761018852717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0803cfdc16e8679b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WordPress Public Route Table"
            },
            "tags_all": {
              "Name": "WordPress Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-047963b59807ac46a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.wordpress_igw",
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1f5cfcb3fdd690a",
            "route_table_id": "rtb-0479ac95758d1e46e",
            "subnet_id": "subnet-0d5c668e422972d08"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.wordpress_igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:subnet/subnet-0231cfb714207b653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0231cfb714207b653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761018852717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WordPress Private Subnet"
            },
            "tags_all": {
              "Name": "WordPress Private Subnet"
            },
            "vpc_id": "vpc-047963b59807ac46a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:subnet/subnet-0d5c668e422972d08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5c668e422972d08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761018852717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WordPress Public Subnet"
            },
            "tags_all": {
              "Name": "WordPress Public Subnet"
            },
            "vpc_id": "vpc-047963b59807ac46a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:security-group/sg-0b5fdbc41a790d7a4",
            "description": "Security group for WordPress EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5fdbc41a790d7a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress_ec2_sg",
            "name_prefix": "",
            "owner_id": "761018852717",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047963b59807ac46a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:security-group/sg-064c3bd00e6c46ebb",
            "description": "Security group for WordPress RDS instance",
            "egress": [],
            "id": "sg-064c3bd00e6c46ebb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5fdbc41a790d7a4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress_rds_sg",
            "name_prefix": "",
            "owner_id": "761018852717",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047963b59807ac46a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018852717:vpc/vpc-047963b59807ac46a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aeaa260b83cfab9a",
            "default_route_table_id": "rtb-063d029b1a4402b20",
            "default_security_group_id": "sg-0f791df2045b64892",
            "dhcp_options_id": "dopt-036b50d36e3e999d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047963b59807ac46a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063d029b1a4402b20",
            "owner_id": "761018852717",
            "tags": {
              "Name": "WordPress VPC"
            },
            "tags_all": {
              "Name": "WordPress VPC"
            }
          }
        }
      ]
    }
  ]
}